/*
 * Copyright 2024 Sowers, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option go_package = "bosca.io/api/protobuf/jobs";

import "google/api/annotations.proto";
import "bosca/empty.proto";

package bosca.jobs;

service JobsService {
  rpc Enqueue(QueueRequest) returns (QueueResponse) {
    option (google.api.http) = {
      post: "/v1/jobs/queue"
    };
  }

  rpc Poll(PollRequest) returns (stream Job) {
    option (google.api.http) = {
      get: "/v1/jobs/queue/{queue}"
    };
  }

  rpc Finish(FinishRequest) returns (bosca.Empty) {
    option (google.api.http) = {
      put: "/v1/jobs/queue/{queue}"
      body: "*"
    };
  }
}

message PollRequest {
  string queue = 1;
  int64 timeout = 2;
}

message QueueRequest {
  string queue = 1;
  bytes json = 2;
}

message FinishRequest {
  string queue = 1;
  string id = 2;
  bool success = 3;
}

message Job {
  string id = 1;
  bytes json = 2;
}

message QueueResponse {
  string id = 1;
}